add start script to autodeploy

--- a/README
+++ b/README
@@ -5,13 +5,15 @@
 3. Встановити Ansible згідно документациії http://docs.ansible.com/intro_installation.html
 4. Встановити git 
 5. Розгорнути проект 
-
 Клонувати цій проект до домашної теці
-
 git clone https://github.com/e-government-ua/vagrant.git 
 
 перейти до робочої теки
 cd ./vagrant
+
+./start.sh
+
+або в ручному режимі:
 
 завантажити робочий проект e-government-ua у  теку project
 cd ./project
