--- a/README
+++ b/README
@@ -1,22 +1,22 @@
 # Як розгорнути тестове середовище розробника
 
-1. Завантажити та встановити Vagrant за посиланням  https://www.vagrantup.com/downloads.html
-2. Перевирити та оновити VIrtualBox  до останьої версіі за посиланням https://www.virtualbox.org/wiki/Downloads
-3. Встановити Ansible згідно документациії http://docs.ansible.com/intro_installation.html
-4. Встановити git 
-5. Розгорнути проект 
+1. Завантажити та встановити Vagrant за посиланням  https://www.vagrantup.com/downloads.html;
+2. Перевирити та оновити VirtualBox до останьої версіі за посиланням https://www.virtualbox.org/wiki/Downloads;
+3. Встановити Ansible згідно документациії http://docs.ansible.com/intro_installation.html;
+4. Встановити git;
+5. Розгорнути проект.
 
-перейти до робочої теки
+Перейти до робочої директорії:
 cd ./vagrant
 
 ./start.sh
 
 або в ручному режимі:
 
-Розгорнути віртуальну машину на вагранті
+Розгорнути віртуальну машину за допомогою Vagrant:
 vagrant up
 
-Запустити автомтичну систему деплоя 
+Запустити автомтичну систему для деплоймента: 
 ansible-playbook ./ansible/site.yml -i ./ansible/hosts
 
 останнім повідомленням має бути подібна строка
@@ -27,11 +27,11 @@ e-gov                      : ok=28   changed=24   unreachable=0    failed=0
 
 http://192.168.10.10:8080/wf-dniprorada/
 
-В теці project  можно вести розробку та деплоїти зміни в java аплікації за допомогою команди
+В директорії project  можно вести розробку та деплоїти зміни в java аплікації за допомогою команди
 
 ansible-playbook ./ansible/deploy.yml -i ./ansible/hosts
 
-#Виришення проблем
+#Вирішення проблем
 
 ##Питання:  
 Якщо після команди  ansible-playbook ./ansible/site.yml -i ./ansible/hosts виникає помилка:
